--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
         <mapstruct.version>1.5.3.Final</mapstruct.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
         <maven-apache-plugins.version>3.10.1</maven-apache-plugins.version>
+        <junit.version>4.13.1</junit.version>
+        <commons-io.version>2.13.0</commons-io.version>
+        <jackson-dataformat-xml.version>2.15.2</jackson-dataformat-xml.version>
+        <model-assert.version>1.0.0</model-assert.version>
+        <org.xmlunit.version>2.9.1</org.xmlunit.version>
     </properties>
 
     <dependencies>
@@ -23,7 +28,6 @@
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
         </dependency>
-
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
@@ -32,59 +36,49 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.13.1</version>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct-processor</artifactId>
             <version>${mapstruct.version}</version>
         </dependency>
-
         <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.13.0</version>
+            <version>${commons-io.version}</version>
         </dependency>
-
         <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-xml -->
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-xml</artifactId>
-            <version>2.15.2</version>
+            <version>${jackson-dataformat-xml.version}</version>
         </dependency>
-
         <dependency>
             <groupId>uk.org.webcompere</groupId>
             <artifactId>model-assert</artifactId>
-            <version>1.0.0</version>
+            <version>${model-assert.version}</version>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>org.xmlunit</groupId>
             <artifactId>xmlunit-core</artifactId>
-            <version>2.9.1</version>
+            <version>${org.xmlunit.version}</version>
         </dependency>
-
         <dependency>
             <groupId>org.xmlunit</groupId>
             <artifactId>xmlunit-matchers</artifactId>
-            <version>2.9.1</version>
+            <version>${org.xmlunit.version}</version>
         </dependency>
-
         <dependency>
             <groupId>org.xmlunit</groupId>
             <artifactId>xmlunit-assertj</artifactId>
-            <version>2.9.1</version>
+            <version>${org.xmlunit.version}</version>
             <scope>test</scope>
         </dependency>
-
-
     </dependencies>
-
     <build>
     <plugins>
     <plugin>
@@ -113,7 +107,6 @@
     </plugin>
     </plugins>
     </build>
-
     <repositories>
         <repository>
             <id>1</id>
